--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 			<version>3.12.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 	</dependencies>
 
