--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=demo-service
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=DemoDB
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
