--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,48 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+				<directory>src/main/resources/</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 	</build>
+
+	<profiles>
+		<!--Local Environment-->
+		<profile>
+			<id>local</id>
+			<build>
+				<finalName>${project.artifactId}-local</finalName>
+				<filters>
+					<filter>src/main/resources/application.properties</filter>
+				</filters>
+			</build>
+		</profile>
+
+		<!--Dev Environment-->
+		<profile>
+			<id>dev</id>
+			<build>
+				<finalName>${project.artifactId}-dev</finalName>
+				<filters>
+					<filter>src/main/resources/application-dev.properties</filter>
+				</filters>
+			</build>
+		</profile>
+
+		<!--Prod Environment-->
+		<profile>
+			<id>prod</id>
+			<build>
+				<finalName>${project.artifactId}-prod</finalName>
+				<filters>
+					<filter>src/main/resources/application-prod.properties</filter>
+				</filters>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
