--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 server.port=9090
-spring.application.name=demo-service-LOCAL
+spring.application.name=demo-service-DEV
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
