--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,16 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-			<version>2.7.0</version>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+<!--
+			<version>${spring.boot.version}</version>
+-->
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.29</version>
 		</dependency>
 
 		<dependency>
@@ -41,13 +49,6 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.12.10</version>
-		</dependency>
-
 
 	</dependencies>
 
