--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 			<version>3.12.10</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.10.0</version>
+		</dependency>
+
 
 	</dependencies>
 
